# sender_policy_flattener

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  README.rst  fixtures.json  pyproject.toml  requirements.txt  sender_policy_flattener.py  settings.json  setup.py  tests.py
.github/workflows/: publish.yml  test.yml
example/: settings_example.json
sender_policy_flattener/: __init__.py  __main__.py  cli.py  crawler.py  email_utils.py  formatting.py  handlers.py  mechanisms.py  regexes.py
sender_policy_flattener/test/: dns_mocks.py  email_fmts.py  ip_fixtures.py
tests/: test_sender_policy_flattener.py
